src/visualizationPanel/main.css
body {
  background-color: #ffffff;
}
#table {
  padding-top: 8px;
  display: flex;
  gap: 6px;
}

.variants {
  display: flex;
  flex: 1;
  flex-direction: column;
}

.title {
  color: #ffffff;
  background: #1a707d;
  font-size: 24px;
  text-align: center;
  border-top-right-radius: 4px;
  border-top-left-radius: 4px;
}

.bloc {
  height: 80px;
  cursor: pointer;
}

.bloc:hover {
  opacity: 80%;
}

.bloc:last-child {
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
}
#container {
  height: 400px;
}
.center {
  margin-inline: auto;
  margin-top: 20px;
  width: 50%;
  border: 4px solid #050500;
}

